# dummy-massive-kit

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  README.md  coverage.json  junit.xml  mypy.xml  pyproject.toml  pytest.xml
.github/workflows/: ci.yaml  devops-demo.yaml  python-ci.yml  python-release.yml  release.yaml
actions/devops/changelog-conventional-commit/: action.yml
actions/devops/changelog-conventional-commit/src/: cli.py
actions/devops/changelog-conventional-commit/src/templates/: report.md.j2
actions/devops/pr-comment-update/: README.md
actions/devops/versioning-branch-semantic/: README.md  action.yml  requirements.txt
actions/devops/versioning-branch-semantic/src/: cli.py
actions/python/autogenerate-docs/: action.yml
actions/python/linter-comment/: action.yml
actions/python/linter-comment/src/: builder.py
actions/python/linter-comment/src/templates/: report.md.j2
actions/python/publish-package/: action.yaml  requirement.txt
actions/python/pytest-comment/: action.yml
actions/python/pytest-comment/src/: builder.py
actions/python/pytest-comment/src/template/: report.md.j2
actions/python/pytest-comment/src/templates/: report.md.j2
actions/python/security-comment/: action.yml
actions/python/security-comment/src/: builder.py
actions/python/security-comment/src/templates/: report.md.j2
actions/python/semrel-preview/: action.yml
actions/python/semrel-preview/src/: builder.py
actions/python/semrel-preview/src/templates/: report.md.j2
actions/python/uv-requirements/: README.md  action.yml
docs/: CI-CD-FLOW.md  conf.py  config.py  index.rst
scripts/: extract_version.py  generate_conventional_commit.py  generate_dev_version.py  patch_version.py
src/dummy_massivekit/: __init__.py
src/dummy_massivekit/api/: dummy.py
src/mkit/api/: dummy.py
src/tests/: __init__.py  conftest.py
src/tests/api/: test_api.py
tests/api/: test_api.py
